--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/sitemap": "^2.4.0",
     "axios": "^0.21.1",
-    "core-js": "^3.8.2",
+    "core-js": "^2.6.10",
     "nuxt": "^2.14.12"
   },
   "devDependencies": {}
