--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/amp": "^0.5.4",
     "@nuxtjs/sitemap": "^2.4.0",
     "axios": "^0.21.1",
     "core-js": "^2.6.10",
